# b4m_yahboom

./: .gitignore  B4M_plan.md  GIT_README.md  WORKSPACE_README.md  bashrc_reference.txt  debug_exit_code.sh  debug_exit_codes.sh  fix_paths.sh  rebuild_workspaces.sh  run_gazebo_fixed.sh  run_gazebo_reliable.sh  run_gazebo_robust.sh  run_gazebo_simple.sh  run_gazebo_step_by_step.sh  run_gazebo_step_by_step_interactive.sh  setup_env.sh  source_workspaces.sh  track_exit_code.sh
b4m_waypoint_nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
b4m_waypoint_nav/b4m_waypoint_nav/: b4m_waypoint_nav.py  waypoint_manager.py
b4m_waypoint_nav/launch/: b4m_waypoint_nav_launch.py  waypoint_manager_launch.py
b4m_waypoint_nav/rviz/: b4m_waypoint_nav.rviz
b4m_waypoint_nav/scripts/: waypoint_manager_node.py
doc_txt/: 01.Introduction-5. About charging.txt  04.VM Remote control course-1. VM joy remote control.txt  04.VM Remote control course-1. VM keyboard remote control.txt  04.VM Remote control course-1.Write firmware.txt  04.VM Remote control course-2. VM handle remote control.txt  04.VM Remote control course-2. VM keyboard remote control.txt  04.VM Remote control course-2.How to install and use VM.txt  04.VM Remote control course-4.Connect to microROS agent.txt  04.VM Remote control course-5.First Trial.txt  04.VM Remote control course-Must read before use.txt  05.ROS-WiFi module configuration-0.Serial port configuration WiFi instructions(ROS).txt  05.ROS-WiFi module configuration-2.Connection module proxy.txt  06.ROS+OpenCV course-1.OpenCV Getting started.txt  (+166 more)
(+32 files in other folders)
